--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node ./build/main.js",
-    "dev": "backpack dev",
-    "build": "backpack build",
+    "build": "node_modules/typescript/bin/tsc",
     "watch": "nodemon --watch 'src/**/*' -e ts --exec 'ts-node' ./src/main.ts"
   },
   "dependencies": {
@@ -27,6 +26,7 @@
   "devDependencies": {
     "@types/cron": "^1.7.2",
     "@types/dotenv": "^8.2.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/koa": "^2.13.4",
     "@types/koa-bodyparser": "^4.3.7",
     "@types/koa-morgan": "^1.0.5",
