--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node ./dist/main.js",
+    "start": "yarn build && node ./dist/main.js",
     "build": "node_modules/typescript/bin/tsc",
     "watch": "nodemon --watch 'src/**/*' -e ts --exec 'ts-node' ./src/main.ts"
   },
