--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "yarn build && node ./dist/main.js",
     "build": "node_modules/typescript/bin/tsc",
-    "watch": "nodemon --watch 'src/**/*' -e ts --exec 'ts-node' ./src/main.ts"
+    "dev": "nodemon --watch 'src/**/*' -e ts --exec 'ts-node' ./src/main.ts"
   },
   "dependencies": {
     "@koa/cors": "^3.1.0",
