feat: added memo for /currencies/ticket

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ PORT=4444
 REDIS_HOST=localhost
 REDIS_PORT=6379
 KEY=jwtSecretKey
+API_KEY=5582106464abdc06ed7ac1ee02e7c8be154f112d
+API_KEY2=aea2ac6d0a5d620389a40f3fba1d2eed58f9932d
+API_KEY_NOMICS=5a83eb3d175cc3c31a2f370a159433dc6881df6d
