--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "awesome-typescript-loader": "^5.2.1",
+    "axios": "^0.26.1",
     "backpack-core": "^0.8.4",
     "dotenv": "^16.0.0",
     "joi": "^17.6.0",
@@ -24,6 +25,7 @@
     "typescript": "^4.6.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cron": "^1.7.2",
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^8.5.8",
