--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-morgan": "^1.0.1",
     "koa-router": "^10.1.1",
+    "mongoose": "^6.2.9",
     "nodemon": "^2.0.15",
     "redis": "^4.0.4",
     "typescript": "^4.6.3"
