--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   },
   "dependencies": {
     "@koa/cors": "^3.1.0",
-    "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.26.1",
-    "backpack-core": "^0.8.4",
     "dotenv": "^16.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
@@ -20,10 +18,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-morgan": "^1.0.1",
     "koa-router": "^10.1.1",
-    "mongoose": "^6.2.9",
-    "nodemon": "^2.0.15",
-    "redis": "^4.0.4",
-    "typescript": "^4.6.3"
+    "mongoose": "^6.2.9"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -39,6 +34,7 @@
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
+    "awesome-typescript-loader": "*",
     "eslint": "^7.23.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
