--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "yarn build && node ./dist/main.js",
     "build": "node_modules/typescript/bin/tsc",
-    "dev": "nodemon --watch 'src/**/*' -e ts --exec 'ts-node' ./src/main.ts"
+    "dev": "ENV=DEV nodemon --watch 'src/**/*' -e ts --exec 'ts-node' ./src/main.ts",
+    "test:watch": "ENV=TEST jest --watch --testTimeout=10000",
+    "test": "jest"
   },
   "dependencies": {
     "@koa/cors": "^3.1.0",
@@ -25,6 +27,7 @@
     "@types/axios": "^0.14.0",
     "@types/cron": "^1.7.2",
     "@types/dotenv": "^8.2.0",
+    "@types/jest": "^28.1.4",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/koa": "^2.13.4",
     "@types/koa-bodyparser": "^4.3.7",
@@ -33,14 +36,16 @@
     "@types/koa__cors": "^3.0.2",
     "@types/koa__router": "^8.0.4",
     "@types/node": "^17.0.23",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "awesome-typescript-loader": "*",
     "eslint": "^7.23.0",
-    "jest": "^26.6.3",
+    "jest": "^28.1.2",
     "nodemon": "^2.0.7",
     "shelljs": "^0.8.4",
-    "ts-jest": "^26.5.4",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.5",
     "ts-node": "^10.7.0",
     "typescript": "^4.2.3"
   }
