--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "outDir": "./dist",
     "sourceMap": true,
     "esModuleInterop": true
-
   },
+  "javascript.suggestionActions.enabled": false,
   "types": ["mocha"],
   "include": ["./**/*.ts", "./**/*.js"],
   "exclude": ["node_modules", "dist"]
