feat: refactoring structure, mock test data, auth.test passing simple authentication validation

--- a/.example.env
+++ b/.example.env
@@ -1,2 +1,7 @@
-API_KEY_NOMICS=NOMICS_KEY_ASKLj
-KEY=TOKEN_SECRET_KEY_asdf
+API_KEY_NOMICS=KEY
+# Server secret key for creating and validating tokens
+JWT_SECRET_KEY=KEY 
+# HEADER Sercer secret key for validating
+TOKEN_HEADER_KEY=KEY 
+# PROD DEV TEST
+NODE_ENV=PROD 
