--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_ENV=PROD yarn build && node ./dist/main.js",
+    "start": "NODE_ENV=PROD yarn build && node ./dist/index.js",
     "build": "NODE_ENV=PROD node_modules/typescript/bin/tsc",
-    "dev": "NODE_ENV=DEV nodemon --watch 'src/**/*' -e ts --exec 'ts-node' ./src/main.ts",
-    "test:watch": "NODE_ENV=TEST PORT=4445 jest --watch --testTimeout=60000 --collectCoverage=false --silent",
-    "test": "NODE_ENV=TEST jest"
+    "dev": "NODE_ENV=DEV nodemon --watch 'src/**/*' -e ts --exec 'ts-node' ./src/index.ts",
+    "test:watch": "NODE_ENV=TEST jest --watch --testTimeout=8000 --collectCoverage=false",
+    "test": "NODE_ENV=TEST jest --testTimeout=8000"
   },
   "dependencies": {
     "@koa/cors": "^3.1.0",
