feat: cookies added

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/koa": "^2.13.4",
     "@types/koa-bodyparser": "^4.3.7",
+    "@types/koa-cookie": "^1.0.0",
     "@types/koa-morgan": "^1.0.5",
     "@types/koa-router": "^7.4.4",
     "@types/koa__cors": "^3.0.2",
@@ -42,6 +43,7 @@
     "awesome-typescript-loader": "*",
     "eslint": "^7.23.0",
     "jest": "^28.1.2",
+    "koa-cookie": "^1.0.0",
     "nodemon": "^2.0.7",
     "shelljs": "^0.8.4",
     "supertest": "^6.2.3",
